# etudelib

./: .dockerignore  .gitignore  Makefile  README.md  _old_export.py  _old_locustfile.py  _old_poc_infra_noop.py  experiments.md  microbenchmark_publish_image.sh  microbenchmark_run.sh  poc_infra_noop.py  pod_spec.yaml  pyproject.toml  setup.py  todo_loadtest.md
.ci/: Dockerfile  README.md  (+2 more)
rust/: Cargo.toml  Dockerfile  Makefile  README.md  __Dockerfile  build_loop.sh  development.spec.yaml  etudelibrust-deployment_cpu.yaml  etudelibrust-deployment_gpu.yaml  etudelibrust-deployment_static_baseline_2cpu.yaml  etudelibrust-service.yaml  jit_to_gpu.py  mnist_cpu.pt  mnist_cuda.pt  predict_by_id.sh  run.sh  start.sh  test_cuda_compatibilityrust.sh  train.py  training-deployment_gpu.yaml
rust/config/: config.yaml  configfile.yaml  serving.yaml
rust/docker/: BaseDockerfile  BaseDockerfile_  Dockerfile.cuda  ModelDockerfile
rust/infra/: loadgen.sh
rust/infra/loadgen/: build_loadgen_app.sh  deploy_loadgen.sh
rust/infra/vertex/: deploy_endpoint_model_job.yaml  deploy_model_job.yaml
rust/model_store/: core_bolcom_c10000_t50_eager.pth  core_bolcom_c10000_t50_jitopt.pth  core_bolcom_c10000_t50_onnx.pth  core_bolcom_c10000_t50_payload.yaml  noop_bolcom_c1000000_t50_eager.pth  noop_bolcom_c1000000_t50_jitopt.pth  noop_bolcom_c100000_t50_eager.pth  noop_bolcom_c100000_t50_jitopt.pth  noop_bolcom_c100000_t50_payload.yaml  noop_bolcom_c10000_t50_eager.pth  noop_bolcom_c10000_t50_jitopt.pth  noop_bolcom_c10000_t50_onnx.pth  sasrec_bolcom_c10000_t50_eager.pth  sasrec_bolcom_c10000_t50_jitopt.pth  sasrec_bolcom_c10000_t50_onnx.pth
rust/models/: mnist_cpu.pt  mnist_cuda.pt
rust/src/: lib.rs  main.rs
rust/src/modelruntime/: dummymodelruntime.rs  dummyruntime.rs  jitmodelruntime.rs  mod.rs  onnxmodelruntime.rs
(+697 files in other folders)
