[package]
name = "serving"
version = "0.0.1"
authors = ["bk <bk@bol.com>"]
edition = "2021"

#[lib]
#name = "foo"
#path = "src/lib.rs"

#[[bin]]
#name = "main"
#path = "src/main.rs"

[[bin]]
name = "serving"
path = "src/bin/serving.rs"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
env_logger = "0.10.0"
serde = { version = "1.0.162", features = ["derive"] }
tch = "0.11.0"
uuid = { version = "1.3.2", features = ["v4"] }
serde_yaml = "0.9.21"
ort = "1.14.6"
ndarray = "0.15.6"
