[package]
name = "serving"
version = "0.0.1"
authors = ["bk <bk@bol.com>"]
edition = "2021"

#[lib]
#name = "foo"
#path = "src/lib.rs"

#[[bin]]
#name = "main"
#path = "src/main.rs"

[[bin]]
name = "serving"
path = "src/bin/serving.rs"

[workspace]
resolver = "2"

# enable rpath to load libraries from the same folder as the binary
[profile.dev]
rpath = true

# enable rpath to load libraries from the same folder as the binary
[profile.release]
rpath = true

[dependencies]
# not enable ztd-sys in actix-web because it sometimes fails compiling in Docker
actix-web = {version = "4.3.1", default-features = false, features= ['cookies', 'macros']}
chrono = { version = "0.4.24", features = ["serde"] }
env_logger = "0.10.0"
serde = { version = "1.0.162", features = ["derive"] }
tch = "0.11.0"
uuid = { version = "1.3.2", features = ["v4"] }
serde_yaml = "0.9.21"
# prevent auto upgrading to non compatible version https://stackoverflow.com/questions/45224563/how-to-specify-the-exact-version-of-a-dependency
ort = "= 1.14.6"
ndarray = "0.15.6"
num_cpus = "1.15.0"
goose = "^0.17"
goose-eggs = "0.5.1"
tokio = "^1.28.0"
serde_json = "1.0.96"
rand = "0.8.5"


